# bmpIO

./: CMakeLists.txt
src/: CMakeLists.txt  bmpmini.hpp  example.cpp
test/: CMakeLists.txt  bmpmini_test.cpp
tool/cmake/: create_symlink_to_build.cmake
